--- a/client/index.html
+++ b/client/index.html
@@ -7,19 +7,23 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <link rel="stylesheet" href="styles/pow.css">
   <link rel="stylesheet" href="bower_components/ionicons/css/ionicons.css">
-  <title>Pow - The powerful UI components for mobile application</title>
+  <link rel="stylesheet" href="bower_components/leaflet/dist/leaflet.css">
+
+  <title>Suda Taxi</title>
 </head>
-<body ng-app="Pow" class="pow-app">
+<body ng-app="SudaTaxi" class="pow-app">
 
 	<ui-view></ui-view>
 
+
+
 	<script src="bower_components/zepto/zepto.js"></script>
 	<script src="bower_components/angular/angular.js"></script>
-
+	<script src="bower_components/leaflet/dist/leaflet.js"></script>
+	
 	<script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
 	<script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 
-	
 	<script src="scripts/app.js"></script>
 	<script src="scripts/ui-utils/menu.js"></script>
 </body>
