update map services

--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="styles/pow.css">
   <link rel="stylesheet" href="bower_components/ionicons/css/ionicons.css">
   <link rel="stylesheet" href="bower_components/leaflet/dist/leaflet.css">
-
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZ3PPRO4HcOS8nA-GCEX-TXUhU_PAl6F4&sensor=false&region=VN&libraries=places"></script>
   <title>Suda Taxi</title>
 </head>
 <body ng-app="SudaTaxi" class="pow-app">
@@ -25,6 +25,10 @@
 	<script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 
 	<script src="scripts/app.js"></script>
+
+	<script src="scripts/services/gmaps.js"></script>
+
+
 	<script src="scripts/ui-utils/menu.js"></script>
 </body>
 </html>
