update font and menu

--- a/client/index.html
+++ b/client/index.html
@@ -5,9 +5,11 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="initial-scale = 1.0, user-scalable = no">
   <meta name="apple-mobile-web-app-capable" content="yes" />
-  <link rel="stylesheet" href="styles/pow.css">
   <link rel="stylesheet" href="bower_components/ionicons/css/ionicons.css">
   <link rel="stylesheet" href="bower_components/leaflet/dist/leaflet.css">
+  
+  <link rel="stylesheet" href="styles/pow.css">
+  <link rel="stylesheet" href="styles/main.css">
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZ3PPRO4HcOS8nA-GCEX-TXUhU_PAl6F4&sensor=false&region=VN&libraries=places"></script>
   <title>Suda Taxi</title>
 </head>
