--- a/client/index.html
+++ b/client/index.html
@@ -35,6 +35,8 @@
 
 	<script src="scripts/services/gmaps.js"></script>
 	<script src="scripts/services/translation.js"></script>
+	<script src="scripts/filters/toCurrency.js"></script>
+	<script src="scripts/controllers/appController.js"></script>
 
 	<script src="scripts/ui-utils/menu.js"></script>
 </body>
