update login screen

--- a/client/index.html
+++ b/client/index.html
@@ -36,7 +36,9 @@
 	<script src="scripts/services/gmaps.js"></script>
 	<script src="scripts/services/translation.js"></script>
 	<script src="scripts/filters/toCurrency.js"></script>
+
 	<script src="scripts/controllers/appController.js"></script>
+	<script src="scripts/controllers/states/wellcomeCtrl.js"></script>
 
 	<script src="scripts/ui-utils/menu.js"></script>
 </body>
